--- a/ContactBookApp.UI/Views/User/GetAllUser.cshtml
+++ b/ContactBookApp.UI/Views/User/GetAllUser.cshtml
@@ -54,14 +54,17 @@
                         @Html.DisplayFor(modelItem => item.PhoneNumber)
                     </td>
                     <td>
-                        <img src="@item.ImageUrl" style="width: 2 inches; height: 2 inches;" />
+                        <a href="@item.ImageUrl" target="_blank">
+                            <img src="@item.ImageUrl" style="width: 170px; height: 170px; border-radius: 100px;" />
+                        </a>
+
                     </td>
                     <td>
                         <a asp-controller="User" asp-action="UpdateUserById" asp-route-id="@item.Id" class="btn btn-light">Edit</a>
 
                        @*  @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
                         @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                        @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ }) *@
+                        @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })  *@
                     </td>
                 </tr>
             }
