--- a/ContactBookApp.UI/Views/User/UpdateUserById.cshtml
+++ b/ContactBookApp.UI/Views/User/UpdateUserById.cshtml
@@ -41,8 +41,8 @@
                 </div>
                 <div class="form-group mt-3 d-flex justify-content-between">
                     <input type="submit" value="Save" class="btn btn-primary" />
-                    <input type="submit" value="Delete" class="btn btn-danger" 
-                    asp-controller=" User" asp-action="DeleteUser"/>
+                    @* <input type="submit" value="Delete" class="btn btn-danger" 
+                    asp-controller=" User" asp-action="DeleteUser"/> *@
                 </div>
             </form>
         }
