--- a/ContactBookApp.UI/Views/User/DeleteUser.cshtml
+++ b/ContactBookApp.UI/Views/User/DeleteUser.cshtml
@@ -8,15 +8,15 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>GetUserDto</h4>
+    <h4></h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        @* <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Id)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Id)
-        </dd>
+        </dd> *@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
@@ -41,16 +41,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PhoneNumber)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ImageUrl)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageUrl)
+        <dd class="col-sm-10">
+            <img src="@Model.ImageUrl" alt="Image" style="width: 170px; height: 170px; border-radius: 100px;" />
         </dd>
+
     </dl>
     
     <form asp-controller="User" asp-action="DeleteConfirmed" asp-route-id="@Model.Id">
         <input type="submit" value="Delete" class="btn btn-danger" />
-        <a asp-action="GetAllUser" asp-controller="User" class="btn btn-default">Back to List</a>
+        <a asp-action="GetAllUser" asp-controller="User" class="btn btn-light">Back to List</a>
+        <a asp-controller="User" asp-action="UpdateUserById" asp-route-id="@Model.Id" class="btn btn-light">Edit</a>
     </form>
 </div>
