--- a/ContactBookApp.UI/Views/Home/Index.cshtml
+++ b/ContactBookApp.UI/Views/Home/Index.cshtml
@@ -3,6 +3,28 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome To Your <strong>No 1</strong> Contact App</h1>
 </div>
+<main role="main" class="pb-3 mt-3">
+    <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="images/ify.jpeg" class="d-block w-100 standard-image" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="images/ify.jpeg" class="d-block w-100 standard-image" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="images/ify.jpeg" class="d-block w-100 standard-image" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+</main>
