--- a/ContactBookApp.UI/Views/User/AddNewUser.cshtml
+++ b/ContactBookApp.UI/Views/User/AddNewUser.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="container d-flex align-items-center justify-content-center">
     <div class="col-md-4">
-        <form asp-action="AddNewUser" method="post" class="mt-3">
+        <form asp-action="AddNewUser" method="post" enctype="multipart/form-data" class="mt-3">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
@@ -42,6 +42,12 @@
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="UserImage" class="control-label"></label>
+                <input asp-for="UserImage" type="file" class="form-control" />
+                <span asp-validation-for="UserImage" class="text-danger"></span>
+            </div>
+
             <div class="form-group mt-3">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
