--- a/ContactBookApp.UI/Views/User/UpdateUserById.cshtml
+++ b/ContactBookApp.UI/Views/User/UpdateUserById.cshtml
@@ -39,6 +39,12 @@
                     <input asp-for="ConfirmPassword" class="form-control" />
                     <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                 </div>
+                <div class="form-group">
+                    <label asp-for="UserImage" class="control-label"></label>
+                    <input asp-for="UserImage" type="file" class="form-control" />
+                    <span asp-validation-for="UserImage" class="text-danger"></span>
+                </div>
+
                 <div class="form-group mt-3 d-flex justify-content-between">
                     <input type="submit" value="Save" class="btn btn-primary" />
                     @* <input type="submit" value="Delete" class="btn btn-danger" 
